Update for ratings support
